--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,11 @@ footer{
   color: black;
 }
 
+.coach{
+  border-bottom: solid 1px;
+  padding: 25px 0;
+}
+
 /*###############################################################################*/
 
 @media screen and (max-width: 1000px ) {
